# playlisticot

./: .gitignore  README.md  bot.py  flask_server.py  pyproject.toml
message_processing/: test.py
message_processing/domain/: message.py  message_processor.py  video.py  video_id_scanner.py  video_status_checker.py
message_processing/infra/video_status_checker/: never_in_status_checker.py  youtube_api_status_checker.py
