[project]
name = "pyplaylisticot"
version = "0.1.0"
description = ""
authors = [
    {name = "Simisticot",email = "simi.pra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
discord = "^2.3.2"
